--- a/InfiniteScrollView/InfiniteScrollView/newses.plist
+++ b/InfiniteScrollView/InfiniteScrollView/newses.plist
@@ -6,31 +6,31 @@
 		<key>icon</key>
 		<string>img_01</string>
 		<key>title</key>
-		<string>微微一笑，很是倾城，顾漫作品</string>
+		<string>九寨沟1</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_02</string>
 		<key>title</key>
-		<string>记忆中的东京爱情故事</string>
+		<string>九寨沟2</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_03</string>
 		<key>title</key>
-		<string>剩得漫不经心，却又可歌可泣</string>
+		<string>九寨沟3</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_04</string>
 		<key>title</key>
-		<string>神秘空难事故揭秘</string>
+		<string>九寨沟4</string>
 	</dict>
 	<dict>
 		<key>icon</key>
 		<string>img_05</string>
 		<key>title</key>
-		<string>我朝人民都需要治愈，莫弃疗</string>
+		<string>九寨沟5</string>
 	</dict>
 </array>
 </plist>
